--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             },
 
             account: {
-                id: 'Big Company' 
+                id: 'Big Company', 
                  account_tier:    'VIP',
                 // You can add any additional account level key-values here,
                 // as long as it's not one of the above reserved names.
